ver 2.3.0
* Vertical view(both right to left and left to right) is supported.
* Max number of pty windows is increased to 32.
* Most settings of scrollbar(position,type,color etc) can be dynamically changed.
* Number of extra dots between lines can be specified.
* Brightness of wall picture and transparent background can be adjustied.
* mlterm can work as a daemon process , and mlclient which is a front end of mlterm
  server is added.
* mlterm can handle multiple display connections.
* utmp,wtmp is supported by utemper , login/logout functions , or directly 
  operating BSD style utmp,wtmp files.
  (utemper support is contributed by Mike Fabian , and login/logout one is by
  Minami Hirokazu san. Thanks!)
* and many minor bugs are fixed.

ver 2.2.0(2002/01/29)
* variable length column is supported.
* ISCII support codes are imported(but is not still supported formally).
* fribidi 0.10.0 is supported.
* Full Reset button is added to mlconfig.
* color fading is supported.
* big5 unstandard characters can be converted to and from ucs4.
* cursor form is changed when window is focused or unfocused.
* Background of color-reversed characters is drawn with fg color event under wall paper 
  or tranparent mode.
* ESC ] 20 ; pt BEL sequence is supported.
* mlterm configuration protocol is decided and implemented.
* w3mmlconfig(w3m local-CGI) is contributed by Sakamoto Hironori san.
* mlconf_curses(perl + curses) is contributed by Minami Hirokazu san.
* etc/{font|vfont|aafont|vaafont} format is changed.
  (Dynalab font can be shown correctly by using this extension)
* some characters of CP932 based true type fonts couldn't be shown , but fixed.
* CP932 gaiji characters (IBM , NEC , NECIBM) <=> UCS conversion is supported.
* and many minor bugs are fixed.

ver 2.1.0(2001/12/29)
* Big5 and koi8 copy&paste problem is fixed.
* Bidi rendering and Arabic shaping are supported.
* BIG5HKSCS is supported.
* most of vttest items are passed.